Corrected Header Spacing

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     
   .header-container {
     padding: 12px;
-    padding-top: 6px;
+    
   }
 
   .main-container {
@@ -51,7 +51,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 20px;
+  
   }
   
   nav a {
